# job_search

./: .gitignore  db.sqlite3  pyproject.toml
job_search/: asgi.py  settings.py  urls.py  wsgi.py
vacancies/: views.py
vacancies/migrations/: 0001_initial.py
