[tool.poetry]
name = "job-search"
version = "0.1.0"
description = ""
authors = ["rgazizulin174 <rgazizulin174@gmail.com>"]
readme = "README.md"
packages = [{include = "job_search"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
